--- a/config-repo/feign-service-dev.yml
+++ b/config-repo/feign-service-dev.yml
@@ -5,3 +5,9 @@ eureka:
     service-url:
       defaultZone: http://localhost:10086/eureka
     fetch-registry: true
+spring: #数据库
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/1703a_springcloud?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.jdbc.Driver
