--- a/Gateway_service/src/main/resources/bootstrap.yml
+++ b/Gateway_service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: feign-service
+    name: gateway-service
   cloud:
     config:
       uri: http://localhost:7001
