--- a/api_service/pom.xml
+++ b/api_service/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>config_service</artifactId>
+    <artifactId>api_service</artifactId>
     <dependencies>
-        <!--config服务依赖-->
+        <!--jpa依赖-->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
     </dependencies>
 
